src/Gramatica.java
/* Generated By:JavaCC: Do not edit this line. Gramatica.java */
import java.util.*;
import java.io.*;

public class Gramatica extends Exception implements GramaticaConstants {
  public static void main(String args []) throws ParseException, IOException, Exception
  {
    Gramatica parser = new Gramatica(new FileInputStream("Codigo_Teste.txt"));
    try
    {
      Gramatica.start(); // starta!!
    }
    catch (ParseException e)
    {
      System.out.println("Erros foram encontrados. " + e); // Se erros forem encontrados, o JAVACC lança a Exception
    }
  }

  static final public int start() throws ParseException, Exception {
    label_1:
    while (true) {
      Programa();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case VOID:
      case CHAR:
      case INT:
      case FLOAT:
      case DOUBLE:
      case IF:
      case WHILE:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case IDENTIFICADOR:
      case AC:
      case AP:
      case PV:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
    System.out.print("Gramatica Aceita. \u005cn");
    {if (true) return 0;}
    throw new Error("Missing return statement in function");
  }

  static final public void Programa() throws ParseException, Exception {
    DefinicaoFuncao();

  }

  static final public void DefinicaoFuncao() throws ParseException, Exception {
  Token t = null;
    if (jj_2_1(2147483647)) {
      ListaDeclaracao();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IF:
    case WHILE:
    case FOR:
    case CONTINUE:
    case BREAK:
    case RETURN:
    case IDENTIFICADOR:
    case AC:
    case AP:
    case PV:
    case INCREMENTO:
    case DECREMENTO:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case 84:
    case 85:
    case 86:
      ListaDeclaracoes();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }

    EspecificadoresdeTipo();
    // tipo_de_retorno
        t = jj_consume_token(IDENTIFICADOR);

    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case CHAR:
    case INT:
    case FLOAT:
    case DOUBLE:
      ListaTiposParametros();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(FP);

    CorpoFuncao();

  }

  static final public void ListaTiposParametros() throws ParseException {
    ListadeParametros();

  }

  static final public void ListadeParametros() throws ParseException {
    DeclaracaoParametro();
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(VIRGULA);
      DeclaracaoParametro();
    }

  }

  static final public void DeclaracaoParametro() throws ParseException {
    EspecificadoresdeTipo();
    VariavelParam();

  }

  static final public void CorpoFuncao() throws ParseException {
    jj_consume_token(AC);
    if (jj_2_3(2147483647)) {
      ListaDeclaracao();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IF:
    case WHILE:
    case FOR:
    case CONTINUE:
    case BREAK:
    case RETURN:
    case IDENTIFICADOR:
    case AC:
    case AP:
    case PV:
    case INCREMENTO:
    case DECREMENTO:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case 84:
    case 85:
    case 86:
      ListaDeclaracoes();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(FC);

  }

  static final public void ListaDeclaracoes() throws ParseException {
    label_3:
    while (true) {
      DeclaracaoTipo();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IF:
      case WHILE:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case IDENTIFICADOR:
      case AC:
      case AP:
      case PV:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
    }

  }

  static final public void DeclaracaoTipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFICADOR:
    case AP:
    case PV:
    case INCREMENTO:
    case DECREMENTO:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case 84:
    case 85:
    case 86:
      DeclaracaoExpressao();
      break;
    case AC:
      CorpoFuncao();
      break;
    case IF:
      DeclaracaoCondicional();
      break;
    case WHILE:
    case FOR:
      DeclaracaoIteracao();
      break;
    case CONTINUE:
    case BREAK:
    case RETURN:
      DeclaracaoDesvio();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void DeclaracaoCondicional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);

    DeclaracaoTipo();

    if (jj_2_4(2)) {
      jj_consume_token(ELSE);
      DeclaracaoTipo();
    } else {
      ;
    }


  }

  static final public void DeclaracaoIteracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(AP);
      Expressao();
      jj_consume_token(FP);

      DeclaracaoTipo();

      break;
    case FOR:
      jj_consume_token(FOR);
      jj_consume_token(AP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        Expressao();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(PV);

      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        Expressao();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }

      jj_consume_token(PV);

      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        Expressao();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(FP);

      DeclaracaoTipo();

      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void DeclaracaoDesvio() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONTINUE:
      jj_consume_token(CONTINUE);
      jj_consume_token(PV);

      break;
    case BREAK:
      jj_consume_token(BREAK);
      jj_consume_token(PV);

      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        Expressao();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(PV);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void ListaDeclaracao() throws ParseException {
    label_4:
    while (true) {
      EspecificadoresDeclaracao();
      if (jj_2_5(2147483647)) {
        ;
      } else {
        break label_4;
      }
    }

  }

  static final public void EspecificadoresDeclaracao() throws ParseException {
    DeclaracaoEspecificadores();
    ListaDeclaradoresInicializacao();
    jj_consume_token(PV);

  }

  static final public void DeclaracaoEspecificadores() throws ParseException {
    EspecificadoresdeTipo();
    if (jj_2_6(2147483647)) {
      DeclaracaoEspecificadores();
    } else {
      ;
    }

  }

  static final public void EspecificadoresdeTipo() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      t = jj_consume_token(VOID);
      break;
    case CHAR:
      t = jj_consume_token(CHAR);
      break;
    case INT:
      t = jj_consume_token(INT);
      break;
    case FLOAT:
      t = jj_consume_token(FLOAT);
      break;
    case DOUBLE:
      t = jj_consume_token(DOUBLE);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void ListaDeclaradoresInicializacao() throws ParseException {
    DeclaradorInit();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      DeclaradorInit();

    }
  }

  static final public void DeclaradorInit() throws ParseException {
  Token t = null;
    VariavelParam();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
      jj_consume_token(IGUAL);
      Inicializador();

      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }

  }

  static final public void VariavelParam() throws ParseException {
    DeclaracaoDireta();

  }

  static final public void DeclaracaoDireta() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      t = jj_consume_token(IDENTIFICADOR);
      break;
    case AP:
      jj_consume_token(AP);
      VariavelParam();
      jj_consume_token(FP);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void ListaInicializadores() throws ParseException {
    Inicializador();
    label_6:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(VIRGULA);
      Inicializador();
    }

  }

  static final public void Inicializador() throws ParseException {
    ExpressaoAtribuicao();

  }

  static final public void ExpressaoConstante() throws ParseException {
    ExpressaoCondicional();

  }

  static final public void DeclaracaoExpressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFICADOR:
    case AP:
    case INCREMENTO:
    case DECREMENTO:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case 84:
    case 85:
    case 86:
      Expressao();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(PV);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRINT:
      jj_consume_token(PRINT);
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SCAN:
      jj_consume_token(SCAN);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }

  }

  static final public void Expressao() throws ParseException {
    ExpressaoAtribuicao();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_7;
      }
      jj_consume_token(VIRGULA);
      ExpressaoAtribuicao();
    }

  }

  static final public void ExpressaoAtribuicao() throws ParseException {
    if (jj_2_8(2147483647)) {
      ExpressaoUnaria();
      OperadorAtribuicao();

      ExpressaoAtribuicao();

    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case 84:
      case 85:
      case 86:
        ExpressaoCondicional();
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

  }

  static final public void OperadorAtribuicao() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
      t = jj_consume_token(IGUAL);
      break;
    case 74:
      t = jj_consume_token(74);
      break;
    case 75:
      t = jj_consume_token(75);
      break;
    case 76:
      t = jj_consume_token(76);
      break;
    case 77:
      t = jj_consume_token(77);
      break;
    case 78:
      t = jj_consume_token(78);
      break;
    case 79:
      t = jj_consume_token(79);
      break;
    case 80:
      t = jj_consume_token(80);
      break;
    case 81:
      t = jj_consume_token(81);
      break;
    case 82:
      t = jj_consume_token(82);
      break;
    case 83:
      t = jj_consume_token(83);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void ExpressaoUnaria() throws ParseException {
  Token t = null;
    if (jj_2_9(3)) {
      ExpressaoIncreDecre();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCREMENTO:
        t = jj_consume_token(INCREMENTO);
        ExpressaoUnaria();
        break;
      case DECREMENTO:
        t = jj_consume_token(DECREMENTO);
        ExpressaoUnaria();
        break;
      case SUBTRACAO:
        t = jj_consume_token(SUBTRACAO);
        ExpressaoUnaria();
        break;
      case 84:
        t = jj_consume_token(84);
        ExpressaoUnaria();
        break;
      case MULTIPLICACAO:
        t = jj_consume_token(MULTIPLICACAO);
        ExpressaoUnaria();
        break;
      case 85:
        t = jj_consume_token(85);
        ExpressaoUnaria();
        break;
      case 86:
        t = jj_consume_token(86);
        ExpressaoUnaria();
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

  }

  static final public void ExpressaoIncreDecre() throws ParseException {
  Token t = null;
    ExpressaoPrimaria();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACO:
      case INCREMENTO:
      case DECREMENTO:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACO:
        jj_consume_token(ACO);
        Expressao();
        jj_consume_token(FCO);
        break;
      case INCREMENTO:
        t = jj_consume_token(INCREMENTO);
        break;
      case DECREMENTO:
        t = jj_consume_token(DECREMENTO);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

  }

  static final public void ExpressaoPrimaria() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      t = jj_consume_token(IDENTIFICADOR);
      break;
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      Constant();
      break;
    case AP:
      jj_consume_token(AP);
      Expressao();
      jj_consume_token(FP);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

  }

  static final public void ExpressaoCondicional() throws ParseException {
    OULogico();

  }
